# gatr

./: .detect-secrets.baseline  .gitignore  LICENSE  README.md  ghokie-cli.py  ghokie.py  pyproject.toml  pyproject.toml.non_working  setup.py
ghokie/: __init__.py
src/gatr/: __init__.py  exceptions.py
src/ghokie/: __init__.py
src/scripts/: gatr_cli.py  ghokie_cli.py
