[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghokie"
version = "0.0.1"
description = "GH App Application Access token generator"
readme = "README.md"
authors = [{ name = "Afraz", email = "afrazo@proton.me" }]
license = { text = "MIT" }
dependencies = ['PyJWT', 'requests']
keywords = ["Github"]

[project.urls]
Hompage = "https://github.com/guidion-digital/ghokie"

[project.scripts]
ghokie-cli = "scripts.ghokie_cli:main"
