[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gatr"
dynamic = ["version"]
description = "GH-App Application Access Token Rotator"
readme = "README.md"
authors = [{ name = "Afraz", email = "afrazo@proton.me" }]
license = { file = "LICENSE" }
dependencies = ['PyJWT', 'requests', 'cryptography']
keywords = ["Github"]
requires-python = ">=3.6"

# Can't be used on systems without git installed, even with a fallback command
# [tool.setuptools_scm]
# version_scheme = "no-guess-dev"
# version_file = "_version.py"
# local_scheme = "no-local-version"
# git_describe_command = "git describe --tags --first-parent"

[project.urls]
Hompage = "https://github.com/guidion-digital/gatr"

[project.scripts]
gatr-cli = "scripts.gatr_cli:main"
